--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -44,18 +44,6 @@
 .pst02
   width: 75%
 
-@media screen and (max-width: 768px)
-  .pst01
-    position: initial
-    width: 100%
-  
-  .pst02
-    width: 100%
-
-@media screen and (max-width: 991px)
-  .slyder-a__btn--sigt, .slyder-a__btn--atrs
-    top: 102% !important
-
 .tabs-a.color-acento-contenido .tabs-a__tab:hover, .tabs-a.color-acento-contenido .tabs-a__tab:active, .tabs-a.color-acento-contenido .tabs-a__tab:focus
   color: $white !important
 
@@ -78,6 +66,7 @@
 .tableS1
   border-collapse: collapse
   width: 100%
+  min-width: 400px
 
   th, td
     border: 1px solid #a79e9e
@@ -90,4 +79,30 @@
 .BG01s
   background-color: lighten($color-primario, 5%) !important
 
+.wNew
+  width: 50%
+
+.minCont1
+  overflow-x: auto
+
+.tabs-a__tab
+  background-color: $color-sistema-f
+
+.w-100
+  height: 100% !important
+
+@media screen and (max-width: 768px)
+  .pst01
+    position: initial
+    width: 100%
+  
+  .pst02
+    width: 100%  
+
+@media screen and (max-width: 991px)
+  .slyder-a__btn--sigt, .slyder-a__btn--atrs
+    top: 102% !important
+
+  .wNew
+    width: 80%
 
