--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -4,6 +4,9 @@
 .BG02
   background-color: lighten($color-secundario, 40%) !important
 
+.BG022
+  background-color: #cdf5f6 !important
+
 .BG03
   background-color: lighten($color-acento-contenido, 27%) !important
 
